# SailorBlog

./: .gitignore  README.md
backend/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/SailorBlog/: settings.py  urls.py
backend/posts/: models.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_alter_post_categroy_delete_category.py  0003_rename_categroy_post_category.py
backend/src/backend/SailorBlog/: asgi.py  urls.py  wsgi.py
backend/src/backend/posts/migrations/: 0001_initial.py  0004_alter_post_options_post_title_idx_and_more.py
backend/src/backend/users/: models.py  serializers.py  urls.py  views.py
backend/src/backend/users/migrations/: 0001_initial.py  0002_alter_userinfo_options_alter_userinfo_bio_and_more.py
backend/user/: models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_userinfo_options.py
backend/users/: models.py  serializers.py  urls.py  views.py
frontend/: package.json  pnpm-lock.yaml
